fixed z-index of top bar

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   right: -300px;
-  z-index: 2;
+  z-index: 7;
 
   display: flex;
   flex-direction: column;
@@ -18,6 +18,7 @@
 
   &.active {
     right: 0px;
+    z-index: 7;
   }
 
   ul {
@@ -26,18 +27,22 @@
     list-style: none;
     color: white;
     width: 60%;
+    z-index: 7;
   }
 
   li {
     margin-bottom: 25px;
+    z-index: 7;
     a {
       font-size: 30px;
       font-weight: 300;
       color: inherit;
       text-decoration: none;
+      z-index: 7;
 
       &:hover {
         font-weight: 500;
+        z-index: 7;
       }
     }
   }
