--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -6,7 +6,7 @@
   color: $mainColor;
   position: fixed;
   top: 0;
-  z-index: 3;
+  z-index: 8;
   transition: all 450ms ease-in-out;
 
   overflow: hidden;
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 8;
 
     .left {
       display: flex;
@@ -59,12 +60,14 @@
         flex-direction: column;
         justify-content: space-between;
         cursor: pointer;
+        z-index: 8;
 
         span {
           width: 100%;
           height: 3px;
           background-color: $mainColor;
           transform-origin: left;
+          z-index: 8;
           scrollbar-width: none; //firefox only
           &::-webkit-scrollbar {
             display: none;
@@ -78,19 +81,23 @@
   &.active {
     background-color: $mainColor;
     color: white;
+    z-index: 8;
 
     .hamburger {
       span {
         &:first-child {
           background-color: white;
           transform: rotate(45deg);
+          z-index: 8;
         }
         &:nth-child(2) {
           opacity: 0;
+          z-index: 8;
         }
         &:last-child {
           background-color: white;
           transform: rotate(-45deg);
+          z-index: 8;
         }
       }
     }
